--- a/tvcust/src/main/res/layout/fragment_build.xml
+++ b/tvcust/src/main/res/layout/fragment_build.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/showingroup"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00000000">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="building"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#f1f1f1"
-            android:text="building"/>
+            android:textColor="#f1f1f1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textColor="#cccccc"
-            android:text="建设中"/>
+            android:text="建设中"
+            android:textColor="#cccccc" />
 
 
     </LinearLayout>
-
 
 </RelativeLayout>
