--- a/tvcust/src/main/res/layout/activity_test.xml
+++ b/tvcust/src/main/res/layout/activity_test.xml
@@ -63,13 +63,16 @@
         android:layout_alignLeft="@+id/acache"
         android:layout_alignStart="@+id/acache" />
 
-    <ImageView
+    <Button
+        android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/img_test"
-        android:layout_below="@+id/clear"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="88dp" />
+        android:onClick="onClick"
+        android:text="share"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/acache"
+        android:layout_toEndOf="@+id/acache"
+        android:layout_marginLeft="31dp"
+        android:layout_marginStart="31dp" />
 
 </RelativeLayout>
