--- a/tvcust/src/main/res/drawable/shape_oval_dot_glod.xml
+++ b/tvcust/src/main/res/drawable/shape_oval_dot_glod.xml
@@ -2,7 +2,7 @@
     android:shape="oval" >
 
     <!-- 填充 -->
-    <solid android:color="@color/sb_glod" />
+    <solid android:color="@color/sb_blue" />
 
     <size
         android:width="8dp"
