--- a/tvcust/src/main/res/drawable/shape_rect_corner_glod_line.xml
+++ b/tvcust/src/main/res/drawable/shape_rect_corner_glod_line.xml
@@ -6,7 +6,7 @@
     <!-- 描边 -->
     <stroke
         android:width="1px"
-        android:color="@color/sb_glod"/>
+        android:color="@color/sb_blue"/>
 
     <corners
         android:topLeftRadius="5dp"
