--- a/tvcust/src/main/res/layout/activity_reqfix.xml
+++ b/tvcust/src/main/res/layout/activity_reqfix.xml
@@ -53,7 +53,7 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    style="@style/text_nomal_glod"
+                    style="@style/text_nomal_blue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="选择问题分类" />
@@ -86,7 +86,7 @@
                     android:layout_weight="1" />
 
                 <TextView
-                    style="@style/text_nomal_glod"
+                    style="@style/text_nomal_blue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="选择所在位置" />
