--- a/tvcust/src/main/res/drawable/shape_rect_btn_line_glod_hot.xml
+++ b/tvcust/src/main/res/drawable/shape_rect_btn_line_glod_hot.xml
@@ -7,7 +7,7 @@
     <!-- 描边 -->
     <stroke
         android:width="1px"
-        android:color="@color/sb_glod"/>
+        android:color="@color/sb_blue"/>
 
     <padding
         android:bottom="5dp"
