--- a/tvcust/src/main/res/layout/dialog_choose_photo.xml
+++ b/tvcust/src/main/res/layout/dialog_choose_photo.xml
@@ -22,7 +22,7 @@
 
     <TextView
         android:id="@+id/text_pop_identy_photo"
-        style="@style/text_big_glod"
+        style="@style/text_big_blue"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/hot_lay_item_dark"
