--- a/tvcust/src/main/res/values/styles.xml
+++ b/tvcust/src/main/res/values/styles.xml
@@ -43,6 +43,11 @@
 
     <style name="KnowDialog" parent="@style/MyDialog"></style>
 
+    <style name="AnimBottom" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/push_bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/push_bottom_out</item>
+    </style>
+
 
     <style name="edit_hidden">
         <item name="android:background">@color/none</item>
@@ -59,8 +64,8 @@
     </style>
 
 
-    <style name="text_subig_glod">
-        <item name="android:textColor">@color/sb_glod</item>
+    <style name="text_subig_blue">
+        <item name="android:textColor">@color/sb_blue</item>
         <item name="android:textSize">@dimen/text_subig</item>
     </style>
 
@@ -76,11 +81,6 @@
 
     <style name="text_big_blue">
         <item name="android:textColor">@color/sb_blue</item>
-        <item name="android:textSize">@dimen/text_big</item>
-    </style>
-
-    <style name="text_big_glod">
-        <item name="android:textColor">@color/sb_glod</item>
         <item name="android:textSize">@dimen/text_big</item>
     </style>
 
@@ -109,8 +109,8 @@
         <item name="android:textSize">@dimen/text_nomal</item>
     </style>
 
-    <style name="text_nomal_glod">
-        <item name="android:textColor">@color/sb_glod</item>
+    <style name="text_nomal_blue">
+        <item name="android:textColor">@color/sb_blue</item>
         <item name="android:textSize">@dimen/text_nomal</item>
     </style>
 
