--- a/tvcust/src/main/res/layout/fragment_home_qw.xml
+++ b/tvcust/src/main/res/layout/fragment_home_qw.xml
@@ -1,8 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".ui.activity.HomeActivity">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <ImageView
+                android:id="@+id/img_msg_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginRight="20dp"
+                android:src="@drawable/home_qw_msg_hot" />
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
     <com.liaoinstan.springview.widget.SpringView
         android:layout_width="match_parent"
@@ -141,15 +169,15 @@
                 <TextView
                     android:id="@+id/text_home_qw_more"
                     style="@style/text_nomal_dark"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="查看更多"/>
+                    android:paddingBottom="20dp"
+                    android:paddingTop="10dp"
+                    android:text="查看更多" />
 
             </LinearLayout>
 
         </ScrollView>
     </com.liaoinstan.springview.widget.SpringView>
-</RelativeLayout>
+</LinearLayout>
