--- a/tvcust/src/main/res/layout/activity_devicedetail.xml
+++ b/tvcust/src/main/res/layout/activity_devicedetail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sb_bk_dark"
+    android:background="@color/sb_bk"
     android:fitsSystemWindows="true"
     tools:context="com.sobey.tvcust.ui.activity.DeviceDetailActivity">
 
