--- a/tvcust/src/main/res/values/colors.xml
+++ b/tvcust/src/main/res/values/colors.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">@color/sb_bk_dark</color>
+    <color name="colorPrimaryDark">#101a20</color>
     <color name="colorAccent">@color/sb_blue</color>
 
-
+    <color name="white">#ffffff</color>
     <color name="none">#00000000</color>
 
+    <color name="sb_glod">#e5b72d</color>
     <color name="sb_glod_hint">#22e7b744</color>
     <color name="sb_text_white">#f1f1f1</color>
     <color name="sb_text_light">#cccccc</color>
     <color name="sb_text_dark">#999999</color>
-    <color name="sb_text_blank">#555555</color>
+    <color name="sb_text_blank">#666666</color>
     <!---->
     <color name="sb_text_login_title">#626466</color>
     <color name="sb_blue">#5793e6</color>
     <color name="sb_blue_hint">#cfe4fb</color>
     <color name="sb_blue_hint_trans">#335793e6</color>
     <color name="sb_bk_dark_trans">#55000000</color>
+    <color name="sb_bk_dark">#15222a</color>
 
-    <color name="sb_tab_bk">#30383f</color>
-    <color name="sb_bk">#21272c</color>
-    <color name="sb_bk_dark">#181818</color>
+    <color name="sb_tab_bk">#ffffff</color>
+    <color name="sb_bk">#e6e6e6</color>
+    <color name="sb_bk_light">#fafafa</color>
+
     <color name="sb_line">#55999999</color>
     <color name="sb_line_dark">#99000000</color>
 
@@ -31,5 +34,5 @@
     <color name="sb_red">#fff03619</color>
 
 
-    <color name="sb_track">#cccccc</color>
+    <color name="sb_track">#8699aa</color>
 </resources>
