--- a/tvcust/src/main/res/layout/fragment_info_quan.xml
+++ b/tvcust/src/main/res/layout/fragment_info_quan.xml
@@ -4,9 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycle_info_quan"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_info_quan"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycle_info_quan"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
