--- a/tvcust/src/main/res/layout/fragment_server.xml
+++ b/tvcust/src/main/res/layout/fragment_server.xml
@@ -20,41 +20,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
             <!--app:layout_scrollFlags="scroll|enterAlways"-->
 
-            <LinearLayout
-                android:id="@+id/btn_go_reqfix"
-                android:layout_gravity="right"
-                android:gravity="center"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_reqfix" />
-
-                <TextView
-                    android:layout_marginTop="2dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_tiny"
-                    android:textColor="@color/sb_blue"
-                    android:text="维修申报"/>
-
-            </LinearLayout>
-
         </android.support.v7.widget.Toolbar>
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tab_order"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/sb_bk_dark"
-            app:tabIndicatorColor="@color/sb_blue"
-            app:tabIndicatorHeight="3dp"
-            app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="@color/sb_text_light" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -72,11 +38,9 @@
             app:type="follow">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycle_order"
+                android:id="@+id/recycle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:paddingBottom="10dp" />
+                android:layout_height="match_parent"/>
 
         </com.liaoinstan.springview.widget.SpringView>
 
